update application properties for MQTT and PostgreSQL configurations

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,15 +6,15 @@ spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 # MQTT broker para backend dentro de Docker:
-# mqtt.broker.uri=tcp://mqtt:1883
+mqtt.broker.uri=tcp://mqtt:1883
 
 # MQTT broker para desarrollo local (backend en IntelliJ):
-mqtt.broker.uri=tcp://localhost:1883
+# mqtt.broker.uri=tcp://localhost:1883
 
 # PostgreSQL dentro de Docker:
-# spring.datasource.url=jdbc:postgresql://postgres:5432/coldchain
+spring.datasource.url=jdbc:postgresql://postgres:5432/coldchain
 
 # PostgreSQL para desarrollo local (sin dockerizar el backend):
-spring.datasource.url=jdbc:postgresql://localhost:5432/coldchain
+# spring.datasource.url=jdbc:postgresql://localhost:5432/coldchain
 
 
