--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,12 @@
-# Build stage
+# Etapa de build
 FROM node:18 AS build
 WORKDIR /app
 COPY . .
 RUN npm install && npm run build
 
-# Serve with nginx
+# Etapa de producción: NGINX
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
