--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,20 +1,28 @@
 server {
-  listen 80;
-  root /usr/share/nginx/html;
-  index index.html;
+    listen 80;
+    server_name localhost;
 
-  location / {
-    try_files $uri /index.html;
-  }
+    root /usr/share/nginx/html;
+    index index.html;
 
-  location /api/ {
-    proxy_pass http://backend:8080;
-  }
+    location / {
+        try_files $uri /index.html;
+    }
 
-  location /ws-readings {
-    proxy_pass http://backend:8080;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
-  }
+    # Proxy para API REST
+    location /api/ {
+        proxy_pass http://backend:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Proxy para WebSocket
+    location /ws-readings/ {
+        proxy_pass http://backend:8080/ws-readings/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+    }
 }
