--- a/chaincode/temp-validator/javascript/package.json
+++ b/chaincode/temp-validator/javascript/package.json
@@ -1,9 +1,16 @@
 {
   "name": "temp-validator",
   "version": "1.0.0",
+  "description": "Validador de temperatura",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "fabric-chaincode-node start"
+  },
   "dependencies": {
-    "fabric-contract-api": "^2.4.9"
+    "fabric-contract-api": "^2.4.0",
+    "fabric-shim": "^2.4.0"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
